# sourcediffusion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  mkproj.bat
.github/workflows/: build.yml
res/: resources.rc
src/dll/: dllmain.cpp
src/dll/source/: interfaces.cpp  interfaces.h  math.h
src/dll/source/classes/: cviewsetup.h
src/dll/source/interfaces/: iappsystem.h  imaterialsystem.h  imatrendercontext.h  iviewrender.h
src/dll/ssd/: callbacks.h  gen.cpp  gen.h  globals.h  hooks.cpp  hooks.h  imgui.cpp  imguicustom.h  imguiextra.h  loader.cpp  loader.h  menu.cpp  overlay.cpp
src/dll/ssd/hooks/: cursor.cpp  d3d.cpp  view.cpp  wnd.cpp
src/loader/: main.cpp
src/shared/util/: bind.cpp  bind.h  callback.h  keycodes.h  log.cpp  log.h  memory.cpp  memory.h  pe.cpp  pe.h  resources.cpp  resources.h  wininternals.h
